# dloader

./: .gitignore  CLAUDE.md  Justfile  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
src/dloader/: __init__.py  dataloader.py
tests/: conftest.py  release_smoke_test.py  test_dataloader.py
tests/integration/: test_strawberry_sqlalchemy.py
