[project]
name = "dloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Tomek Paczkowski", email = "tomek@hauru.eu" }]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.402",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.12.1",
    "uvloop>=0.21.0",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
